--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<object align="middle">
 <form name="htmlform" method="post" action="html_form_send.php" >
 <table width="450px">
 </tr>
@@ -35,3 +36,4 @@
 </tr>
 </table>
 </form>
+</object>
